Dylan's first commit.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Killer Frag</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">I am your master</string>
     <string name="action_settings">Settings</string>
 
 </resources>
