--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Killer Frag</string>
-    <string name="hello_world">No no no EYE am ur mazter!</string>
+    <string name="hello_world">Testing biatch!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
