--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Killer Frag</string>
     <string name="hello_world">Teen Titans!</string>
     <string name="action_settings">Settings</string>
+    
+    <!-- new string for action bar item "show list" -->
+    <string name="show_list">Show List</string>
 
 </resources>
