--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="app_name">Killer Frag</string>
     <string name="hello_world">This is a placeholder fragment. Stand by for future sweet content!</string>
     <string name="action_settings">Settings</string>
-    
+
     <!-- new string for action bar item "show list" -->
     <string name="show_list">Show List</string>
+    <string name="title_activity_full_screen_image"></string>
 
 </resources>
