Added About in menu Added AboutFrag Changed MainActivity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Killer Frag</string>
     <string name="hello_world">This is a placeholder fragment. Stand by for future sweet content!</string>
-    <string name="action_settings">Settings</string>
+    <string name="about">About</string>
 
     <!-- new string for action bar item "show list" -->
     <string name="show_list">Show List</string>
